Update wflow versions

--- a/examples/wflow.ipynb
+++ b/examples/wflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0f9b19c3",
+   "id": "c60128f4",
    "metadata": {},
    "source": [
     "# Running Wflow using the ewatercycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48ff8ec2",
+   "id": "1118bf92",
    "metadata": {},
    "source": [
     "### 1. Copy an example case\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "712abab5",
+   "id": "2b1fdf19",
    "metadata": {
     "tags": []
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6564f4b",
+   "id": "7ed73248",
    "metadata": {},
    "source": [
     "### 2. Verify your configuration settings\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11338483",
+   "id": "6d368d06",
    "metadata": {},
    "source": [
     "### 3. Setting up the model"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7d5b6980",
+   "id": "a68ecea4",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
     {
      "data": {
       "text/plain": [
-       "('2019.1', '2020.1')"
+       "('2019.1', '2020.1.1')"
       ]
      },
      "execution_count": 1,
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1f22bfa0",
+   "id": "5e2dd38d",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bf6a25cd",
+   "id": "2e14dea5",
    "metadata": {},
    "outputs": [
     {
@@ -156,17 +156,17 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c61f3c70",
+   "id": "6faa85a0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ewatercycle.models.Wflow(version='2019.1', parameter_set=parameter_set, forcing=forcing)"
+    "model = ewatercycle.models.Wflow(version='2020.1.1', parameter_set=parameter_set, forcing=forcing)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1e70d17c",
+   "id": "0278b57f",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9cfe6a0f",
+   "id": "a964e937",
    "metadata": {
     "tags": []
    },
@@ -251,14 +251,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0ddf8b4e",
+   "id": "8d94b71d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_174908/wflow_ewatercycle.ini'),\n",
-       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_174908'))"
+       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_181913/wflow_ewatercycle.ini'),\n",
+       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_181913'))"
       ]
      },
      "execution_count": 7,
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a6fca2fd",
+   "id": "c1f5e595",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86c56b1c",
+   "id": "7cc9e59e",
    "metadata": {},
    "source": [
     "### 4. Running the model"
@@ -351,13 +351,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d7ddadc3",
+   "id": "93035ca5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_174908/wflow_ewatercycle.ini')"
+       "PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210512_181913/wflow_ewatercycle.ini')"
       ]
      },
      "execution_count": 9,
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e14effbe",
+   "id": "85e297f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6029a38e",
+   "id": "85234ff9",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "11430870",
+   "id": "bf0453bf",
    "metadata": {
     "tags": []
    },
@@ -776,13 +776,13 @@
        "  * latitude   (latitude) float64 45.89 45.93 45.97 46.0 ... 51.98 52.02 52.05\n",
        "    time       object 1995-01-30 00:00:00\n",
        "Attributes:\n",
-       "    units:     m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-04c4a316-cebb-41c5-b018-047c478dd8ab' class='xr-array-in' type='checkbox' checked><label for='section-04c4a316-cebb-41c5-b018-047c478dd8ab' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
+       "    units:     m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'RiverRunoff'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 169</li><li><span class='xr-has-index'>longitude</span>: 187</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-0dab7ff7-3e1b-49dd-a7b8-1405d83804a0' class='xr-array-in' type='checkbox' checked><label for='section-0dab7ff7-3e1b-49dd-a7b8-1405d83804a0' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       ...,\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
-       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-c4cda102-533e-4266-b942-8416ecfe1964' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c4cda102-533e-4266-b942-8416ecfe1964' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-43784e34-f348-4ea4-907d-2b6dce4a1ed1' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-43784e34-f348-4ea4-907d-2b6dce4a1ed1' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-e101b3a9-a5e1-4c0e-8d8b-ffd55447f295' class='xr-var-data-in' type='checkbox'><label for='data-e101b3a9-a5e1-4c0e-8d8b-ffd55447f295' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
+       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-ff687249-7804-4469-998f-592c99d4f9c3' class='xr-section-summary-in' type='checkbox'  checked><label for='section-ff687249-7804-4469-998f-592c99d4f9c3' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>5.227 5.264 5.3 ... 12.01 12.05</div><input id='attrs-48f05819-d4a4-4928-82ba-148d867bb5cf' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-48f05819-d4a4-4928-82ba-148d867bb5cf' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-4943efa9-623a-4377-81cb-3defe160258a' class='xr-var-data-in' type='checkbox'><label for='data-4943efa9-623a-4377-81cb-3defe160258a' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 5.227163,  5.26383 ,  5.300497,  5.337163,  5.37383 ,  5.410497,\n",
        "        5.447163,  5.48383 ,  5.520497,  5.557163,  5.59383 ,  5.630497,\n",
        "        5.667163,  5.70383 ,  5.740497,  5.777164,  5.81383 ,  5.850497,\n",
        "        5.887163,  5.92383 ,  5.960497,  5.997163,  6.03383 ,  6.070497,\n",
@@ -813,7 +813,7 @@
        "       11.387163, 11.42383 , 11.460497, 11.497164, 11.53383 , 11.570497,\n",
        "       11.607163, 11.64383 , 11.680496, 11.717163, 11.75383 , 11.790497,\n",
        "       11.827164, 11.86383 , 11.900496, 11.937163, 11.97383 , 12.010497,\n",
-       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-b0fcd45a-9318-4141-9a31-3625afc4737d' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-b0fcd45a-9318-4141-9a31-3625afc4737d' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-11f45281-47b5-4b60-85b1-3ca92a55ab48' class='xr-var-data-in' type='checkbox'><label for='data-11f45281-47b5-4b60-85b1-3ca92a55ab48' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
+       "       12.047163])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>45.89 45.93 45.97 ... 52.02 52.05</div><input id='attrs-374ee0ac-7cc1-4d7e-8337-4f78ca5bcda0' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-374ee0ac-7cc1-4d7e-8337-4f78ca5bcda0' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-c55a1d91-c1a7-4bc1-9a52-3cb889a29323' class='xr-var-data-in' type='checkbox'><label for='data-c55a1d91-c1a7-4bc1-9a52-3cb889a29323' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([45.894268, 45.930935, 45.967602, 46.004265, 46.040932, 46.077599,\n",
        "       46.114265, 46.150932, 46.187599, 46.224266, 46.260933, 46.2976  ,\n",
        "       46.334267, 46.370934, 46.4076  , 46.444267, 46.480934, 46.517601,\n",
        "       46.554268, 46.590935, 46.627602, 46.664268, 46.700932, 46.737598,\n",
@@ -841,7 +841,7 @@
        "       51.394268, 51.430935, 51.467602, 51.504265, 51.540932, 51.577599,\n",
        "       51.614265, 51.650932, 51.687599, 51.724266, 51.760933, 51.7976  ,\n",
        "       51.834267, 51.870934, 51.9076  , 51.944267, 51.980934, 52.017601,\n",
-       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1995-01-30 00:00:00</div><input id='attrs-1d75fe22-9bf8-4ede-946e-15af8af52783' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-1d75fe22-9bf8-4ede-946e-15af8af52783' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-bd5df0de-4241-4c28-8add-6f4b3c56552e' class='xr-var-data-in' type='checkbox'><label for='data-bd5df0de-4241-4c28-8add-6f4b3c56552e' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1995, 1, 30, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-ac645fd9-ae93-4672-a613-d13d43736a92' class='xr-section-summary-in' type='checkbox'  checked><label for='section-ac645fd9-ae93-4672-a613-d13d43736a92' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m^3/s</dd></dl></div></li></ul></div></div>"
+       "       52.054268])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1995-01-30 00:00:00</div><input id='attrs-823f2fc2-97b6-43fb-b713-9a0b90ae0b72' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-823f2fc2-97b6-43fb-b713-9a0b90ae0b72' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-511bbb35-5cac-4584-9e97-7080a4489d1b' class='xr-var-data-in' type='checkbox'><label for='data-511bbb35-5cac-4584-9e97-7080a4489d1b' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1995, 1, 30, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-377ca19f-52d1-4fe2-8600-2deb29201bb6' class='xr-section-summary-in' type='checkbox'  checked><label for='section-377ca19f-52d1-4fe2-8600-2deb29201bb6' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd> m^3/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'RiverRunoff' (latitude: 169, longitude: 187)>\n",
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b17cb739",
+   "id": "0ce05438",
    "metadata": {},
    "outputs": [
     {
@@ -919,13 +919,13 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8766195d",
+   "id": "5d3c45ba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7ffaf8cbd700>"
+       "<matplotlib.collections.QuadMesh at 0x7fc115e0c9a0>"
       ]
      },
      "execution_count": 14,
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6dea043f",
+   "id": "8cf3c18c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f62687bf",
+   "id": "ab107c7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e48938d",
+   "id": "5db7eeec",
    "metadata": {},
    "outputs": [],
    "source": []
