refactor notebook based on new API

--- a/examples/lisflood.ipynb
+++ b/examples/lisflood.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5112a640",
+   "id": "27d5425f",
    "metadata": {},
    "source": [
     "![image](https://www.ewatercycle.org/assets/logo.png)"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "0f220f3d",
+   "execution_count": 1,
+   "id": "85cb7079",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,21 +25,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "82c938e8",
+   "execution_count": null,
+   "id": "3d61f87a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
     "import numpy as np\n",
     "from ewatercycle import CFG\n",
-    "from ewatercycle.models import Lisflood\n",
+    "import ewatercycle.models\n",
     "from ewatercycle.models.lisflood import LisfloodParameterSet"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d7ba66e6",
+   "id": "73ca6105",
    "metadata": {},
    "source": [
     "## Run lisflood class\n",
@@ -57,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fa965597",
+   "id": "8716e47f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,63 +66,131 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f8baa990",
+   "id": "41ccb313",
    "metadata": {},
    "outputs": [],
    "source": [
     "parameterset = LisfloodParameterSet(\n",
-    "    root=Path('/projects/0/wtrcycle/comparison/lisflood_input/Lisflood01degree_masked'),\n",
-    "    mask=Path('/projects/0/wtrcycle/comparison/recipes_auxiliary_datasets/LISFLOOD/model_mask.nc'),\n",
-    "    config_template=Path('/projects/0/wtrcycle/comparison/lisflood_input/settings_templates/settings_lisflood.xml'),\n",
-    "    lisvap_config_template=Path('/projects/0/wtrcycle/comparison/lisflood_input/settings_templates/settings_lisvap.xml'),\n",
+    "    root='/projects/0/wtrcycle/comparison/lisflood_input/Lisflood01degree_masked',\n",
+    "    mask='/projects/0/wtrcycle/comparison/recipes_auxiliary_datasets/LISFLOOD/model_mask.nc',\n",
+    "    config_template='/projects/0/wtrcycle/comparison/lisflood_input/settings_templates/settings_lisflood.xml',\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "61b61acf",
+   "id": "b34cc5dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['20.10']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# create lisflood instance\n",
-    "model = Lisflood()"
+    "ewatercycle.models.Lisflood.available_versions"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "864d323f",
+   "id": "4dcad433",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running ewatercycle-lisflood-grpc4bmi.sif singularity container on port 47155\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# setup model\n",
     "# lisflood_ERA-Interim_*_1990_1990.nc data can be copied \n",
     "# from /projects/0/wtrcycle/comparison/forcing/lisflood\n",
-    "forcing_dir = Path('forcing_data')\n",
-    "config_file, config_dir = model.setup(forcing_dir, parameterset)"
+    "forcing_dir = 'forcing_data'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "26b8f2b0",
+   "id": "c9515fbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ewatercycle.models.lisflood.Lisflood at 0x2aaf10831af0>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create lisflood instance\n",
+    "model = ewatercycle.models.Lisflood(version='20.10', parameter_set=parameterset, forcing=forcing_dir)\n",
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5f5ac05b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Input files specific for parameter_set',\n",
+       "  '/lustre1/0/wtrcycle/comparison/lisflood_input/Lisflood01degree_masked'),\n",
+       " ('model boundaries',\n",
+       "  '/lustre1/0/wtrcycle/comparison/recipes_auxiliary_datasets/LISFLOOD'),\n",
+       " ('configuration template',\n",
+       "  PosixPath('/lustre1/0/wtrcycle/comparison/lisflood_input/settings_templates/settings_lisflood.xml')),\n",
+       " ('forcing directory', '/nfs/home2/fakhereh/temp/lisflood_run/forcing_data')]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "516f372d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/scratch/shared/ewatercycle/lisflood_20210419_111132/lisflood_setting.xml\n",
-      "/scratch/shared/ewatercycle/lisflood_20210419_111132\n"
+      "Running /nfs/home2/fakhereh/temp/lisflood_run/ewatercycle-lisflood-grpc4bmi_20.10.sif singularity container on port 41404\n"
+     ]
+    }
+   ],
+   "source": [
+    "# setup model\n",
+    "config_file, config_dir = model.setup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b7ad14e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/scratch/shared/ewatercycle/lisflood_20210517_154035/lisflood_setting.xml\n",
+      "/scratch/shared/ewatercycle/lisflood_20210517_154035\n"
      ]
     }
    ],
@@ -134,8 +201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "9d2a9d10",
+   "execution_count": 12,
+   "id": "73c82ead",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "51e1684c",
+   "id": "a8559b9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f003776c",
+   "id": "b9345265",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2fabfe3d",
+   "id": "61d993b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6fb09d03",
+   "id": "cb4ca822",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2652a997",
+   "id": "0b7ac81b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cab5a4c2",
+   "id": "49fb10e5",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2e8c8f83",
+   "id": "3667f42a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9482bce0",
+   "id": "9d45fa79",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a53bc47b",
+   "id": "92bfddcd",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36445635",
+   "id": "67fdd690",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6b5fcbf",
+   "id": "5a8ef9ac",
    "metadata": {},
    "outputs": [],
    "source": []
