Change constructor and setup methods

--- a/examples/pcrglobwb.ipynb
+++ b/examples/pcrglobwb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "928c4579",
+   "id": "a7631608",
    "metadata": {},
    "source": [
     "# Running PCRGlobWB using the eWaterCycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33da94f8",
+   "id": "203f7fbe",
    "metadata": {
     "tags": []
    },
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0a90d720",
+   "id": "afc266e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fe6a14f",
+   "id": "5296fb8a",
    "metadata": {},
    "source": [
     "This notebook uses the following docker and/or singularity images. Make sure these are present on the system:\n",
@@ -51,19 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "bb69a0c9",
+   "execution_count": 4,
+   "id": "d415d3bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ewatercycle import CFG\n",
-    "from ewatercycle.models import PCRGlobWB"
+    "import ewatercycle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "364e4a53",
+   "execution_count": 2,
+   "id": "edb594b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,8 +72,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "d1d8f2b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PCRGlobWBParameterSet(input_dir=PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_example_case'), default_config=PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_example_case/setup.ini'))\n"
+     ]
+    }
+   ],
+   "source": [
+    "parameterset = ewatercycle.models.pcrglobwb.PCRGlobWBParameterSet(\n",
+    "    input_dir = './pcrglobwb_example_case', \n",
+    "    default_config = './pcrglobwb_example_case/setup.ini'\n",
+    ")\n",
+    "print(parameterset)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
-   "id": "5ac75efe",
+   "id": "c4d1bb50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ee3cce7c",
+   "id": "a311af67",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9351f9a2",
+   "id": "aea69ddb",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7a4a71a7",
+   "id": "8aedb703",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "efd5af6e",
+   "id": "d4e01d2c",
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7e72ac14",
+   "id": "88f64705",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ba81a736",
+   "id": "ddce2f73",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "516f42a6",
+   "id": "1a9e364b",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5ae98537",
+   "id": "12c4a4fa",
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f312e771",
+   "id": "ff9862bb",
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1090,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b71188aa",
+   "id": "c0f574f6",
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "503002fa",
+   "id": "57f97a82",
    "metadata": {},
    "outputs": [],
    "source": []
